@@ -1,0 +1,87 @@
+/*
+Copyright_License {
+
+  XCSoar Glide Computer - http://www.xcsoar.org/
+  Copyright (C) 2000-2015 The XCSoar Project
+  A detailed list of copyright holders can be found in the file "AUTHORS".
+
+  This program is free software; you can redistribute it and/or
+  modify it under the terms of the GNU General Public License
+  as published by the Free Software Foundation; either version 2
+  of the License, or (at your option) any later version.
+
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software
+  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+}
+*/
+
+#include "WeatherConfigPanel.hpp"
+#include "Profile/ProfileKeys.hpp"
+#include "Profile/Profile.hpp"
+#include "Weather/Settings.hpp"
+#include "Widget/RowFormWidget.hpp"
+#include "Interface.hpp"
+#include "UIGlobals.hpp"
+#include "Util/NumberParser.hpp"
+
+enum ControlIndex {
+#ifdef HAVE_PCMET
+  PCMET_USER,
+  PCMET_PASSWORD,
+#endif
+};
+
+class WeatherConfigPanel final
+  : public RowFormWidget {
+public:
+  WeatherConfigPanel()
+    :RowFormWidget(UIGlobals::GetDialogLook()) {}
+
+public:
+  /* methods from Widget */
+  virtual void Prepare(ContainerWindow &parent, const PixelRect &rc) override;
+  virtual bool Save(bool &changed) override;
+};
+
+void
+WeatherConfigPanel::Prepare(ContainerWindow &parent, const PixelRect &rc)
+{
+  const auto &settings = CommonInterface::GetComputerSettings().weather;
+
+  RowFormWidget::Prepare(parent, rc);
+
+  AddText(_T("pc_met Username"), _T(""), settings.pcmet.username);
+  AddPassword(_T("pc_met Password"), _T(""), settings.pcmet.password);
+}
+
+bool
+WeatherConfigPanel::Save(bool &_changed)
+{
+  bool changed = false;
+
+  auto &settings = CommonInterface::SetComputerSettings().weather;
+
+#ifdef HAVE_PCMET
+  changed |= SaveValue(PCMET_USER, ProfileKeys::PCMetUsername,
+                       settings.pcmet.username);
+
+  changed |= SaveValue(PCMET_PASSWORD, ProfileKeys::PCMetPassword,
+                       settings.pcmet.password);
+#endif
+
+  _changed |= changed;
+
+  return true;
+}
+
+Widget *
+CreateWeatherConfigPanel()
+{
+  return new WeatherConfigPanel();
+}
