@@ -28,6 +28,7 @@ Copyright_License {
 
 #ifdef HAVE_HTTP
 #define HAVE_NOAA
+#define HAVE_PCMET
 #endif
 
 #endif
